; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/wordpad/extr_olecallback.c_setup_richedit_olecallback.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/wordpad/extr_olecallback.c_setup_richedit_olecallback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@STGM_READWRITE = common dso_local global i32 0, align 4
@STGM_SHARE_EXCLUSIVE = common dso_local global i32 0, align 4
@STGM_DELETEONRELEASE = common dso_local global i32 0, align 4
@olecallback = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@EM_SETOLECALLBACK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @setup_richedit_olecallback(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @STGM_READWRITE, align 4
  %5 = load i32, i32* @STGM_SHARE_EXCLUSIVE, align 4
  %6 = or i32 %4, %5
  %7 = load i32, i32* @STGM_DELETEONRELEASE, align 4
  %8 = or i32 %6, %7
  %9 = call i32 @StgCreateDocfile(i32* null, i32 %8, i32 0, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @olecallback, i32 0, i32 0))
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %2, align 4
  %11 = load i32, i32* @EM_SETOLECALLBACK, align 4
  %12 = call i32 @SendMessageW(i32 %10, i32 %11, i32 0, i32 ptrtoint (%struct.TYPE_2__* @olecallback to i32))
  %13 = load i32, i32* %3, align 4
  ret i32 %13
}

declare dso_local i32 @StgCreateDocfile(i32*, i32, i32, i32*) #1

declare dso_local i32 @SendMessageW(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
